--- a/MyGame/MyGame/Base.lproj/Main.storyboard
+++ b/MyGame/MyGame/Base.lproj/Main.storyboard
@@ -16,30 +16,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nome do jogo" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="orY-LL-Syk">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nome do jogo" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="orY-LL-Syk">
                                 <rect key="frame" x="16" y="104" width="382" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Plataforma" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U6U-bG-Uv4">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Plataforma" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U6U-bG-Uv4">
                                 <rect key="frame" x="16" y="154" width="382" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Data de lançamento" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IX7-9c-AXJ">
-                                <rect key="frame" x="16" y="220" width="154" height="21"/>
+                                <rect key="frame" x="16" y="204" width="154" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="WcW-tD-GJV">
-                                <rect key="frame" x="16" y="257" width="382" height="120"/>
+                            <datePicker contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="WcW-tD-GJV">
+                                <rect key="frame" x="16" y="241" width="382" height="120"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="120" id="EbB-OJ-E31"/>
                                 </constraints>
                             </datePicker>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Capa" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Acf-qe-d9V">
-                                <rect key="frame" x="16" y="393" width="40" height="21"/>
+                                <rect key="frame" x="16" y="377" width="40" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -49,15 +49,18 @@
                                 <color key="backgroundColor" name="main"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="ADICIONAR"/>
+                                <connections>
+                                    <action selector="onTappedBtnAddAndEdit:" destination="ctn-FJ-Ra8" eventType="touchUpInside" id="yF9-Vt-7Wg"/>
+                                </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EHv-iM-A9u">
-                                <rect key="frame" x="16" y="430" width="382" height="321"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="EHv-iM-A9u">
+                                <rect key="frame" x="16" y="414" width="382" height="337"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hta-14-NHj">
-                                <rect key="frame" x="70.5" y="575.5" width="273" height="30"/>
+                                <rect key="frame" x="70.5" y="567" width="273" height="31"/>
                                 <state key="normal" title="Toque para adicionar a imagem de capa"/>
                                 <connections>
-                                    <action selector="onTappedBtnAddAndEdit:" destination="ctn-FJ-Ra8" eventType="touchUpInside" id="xg5-vE-ZiK"/>
+                                    <action selector="choosePhoto:" destination="ctn-FJ-Ra8" eventType="touchUpInside" id="4fd-ww-R8g"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -85,14 +88,17 @@
                             <constraint firstItem="ltd-Rq-Hps" firstAttribute="bottom" secondItem="oP8-Y6-ghC" secondAttribute="bottom" constant="16" id="spO-8d-FXp"/>
                             <constraint firstItem="hta-14-NHj" firstAttribute="centerY" secondItem="EHv-iM-A9u" secondAttribute="centerY" id="x2N-eH-TrX"/>
                             <constraint firstItem="EHv-iM-A9u" firstAttribute="top" secondItem="Acf-qe-d9V" secondAttribute="bottom" constant="16" id="zF9-T6-wv6"/>
-                            <constraint firstItem="IX7-9c-AXJ" firstAttribute="top" secondItem="U6U-bG-Uv4" secondAttribute="bottom" constant="32" id="zxU-BW-8Bk"/>
+                            <constraint firstItem="IX7-9c-AXJ" firstAttribute="top" secondItem="U6U-bG-Uv4" secondAttribute="bottom" constant="16" id="zxU-BW-8Bk"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ltd-Rq-Hps"/>
                     </view>
                     <navigationItem key="navigationItem" title="Adicionar jogo" id="nkE-J9-M8z"/>
                     <connections>
-                        <outlet property="btn" destination="oP8-Y6-ghC" id="uYF-KX-lEL"/>
-                        <outlet property="inputPlatform" destination="U6U-bG-Uv4" id="3Kg-lM-Yxz"/>
+                        <outlet property="btn" destination="oP8-Y6-ghC" id="ea1-0B-TA3"/>
+                        <outlet property="calendarPicker" destination="WcW-tD-GJV" id="WT2-pf-sQG"/>
+                        <outlet property="inputPlatform" destination="U6U-bG-Uv4" id="UvK-Vf-Sjd"/>
+                        <outlet property="nameField" destination="orY-LL-Syk" id="61G-yA-TFy"/>
+                        <outlet property="uiImage" destination="EHv-iM-A9u" id="2gb-hP-T33"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hv3-20-Np7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -103,7 +109,7 @@
         <scene sceneID="7V7-D4-HLg">
             <objects>
                 <tableViewController id="VMN-15-rV5" customClass="GameTableViewController" customModule="MyGame" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="tfw-u6-6mx">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="tfw-u6-6mx">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -164,6 +170,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="nVo-ow-NYb" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="sG7-rM-sow">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="selectedImageTintColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -236,10 +243,10 @@
         <image name="console" width="23" height="23"/>
         <image name="game" width="23" height="23"/>
         <namedColor name="main">
-            <color red="0.0" green="0.68235294117647061" blue="0.87450980392156863" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.68199998140335083" blue="0.875" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="secondary">
-            <color red="1" green="0.23529411764705882" blue="0.58431372549019611" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <color red="1" green="0.23499999940395355" blue="0.58399999141693115" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
     </resources>
 </document>
